--- a/guess.html
+++ b/guess.html
@@ -3,10 +3,8 @@
   <title></title>
 </head>
 <body>
-
-<script>
-console.log("javascript is working");
-</script>
+<div id="message">
+</div>
 <script src="guess.js"></script>
 </body>
 </html>
