Functioning Input and Output
But no guessing game! Needs integration.

--- a/guess.html
+++ b/guess.html
@@ -1,10 +1,13 @@
 <html>
 <head>
   <title></title>
+  <link rel="stylesheet" type="text/css" href="guess.css">
 </head>
 <body>
 <div id="message">
 </div>
+<h2>Input Here:</h2>
+<input type="text" id="userInput" name="userInput" value="" />
 <script src="guess.js"></script>
 </body>
 </html>
